<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/graphics">
        <ListPreference
            android:defaultValue="Full"
            android:entries="@array/ResolutionScaleFactorEntries"
            android:entryValues="@array/FullHalf"
            android:key="scale_FactorSet"
            android:summary="%s"
            android:title="@string/screenResolution" />
        <ListPreference
            android:defaultValue="On"
            android:entries="@array/DinamicUIScaleEntries"
            android:entryValues="@array/OnOff"
            android:key="din_uiScale"
            android:summary="%s"
            android:title="@string/dinUIScale" />
        <ListPreference
            android:defaultValue="On"
            android:entries="@array/DrawBannerScaleEntries"
            android:entryValues="@array/OnOff"
            android:key="ui_drawBanner"
            android:summary="%s"
            android:title="@string/banner" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/aimAssistTitle">
	    <CheckBoxPreference
            android:defaultValue="true"
            android:key="useAimAssist"
            android:summary="@string/aimAssistDescription"
            android:title="@string/useAimAssist" />
	    <com.github.aarcangeli.serioussamandroid.preferences.SeekBarPreference
            android:defaultValue="100"
            android:key="autoAimSens"
            android:max="100"
            android:summary="%s%%"
            android:text="%"
            android:title="@string/aimAssistSens" />	
    </PreferenceCategory>
    <PreferenceCategory android:title="Inputs">
        <ListPreference
            android:defaultValue="Auto"
            android:entries="@array/ShowTouchControllerEntries"
            android:entryValues="@array/AutoYesNo"
            android:key="showTouchController"
            android:summary="%s"
            android:title="@string/showTouchController" />
		<CheckBoxPreference
            android:defaultValue="false"
            android:key="useVolumeKeys"
            android:summary="@string/volumeKeysDescription"
            android:title="@string/useVolumeKeys" />
        <ListPreference
            android:defaultValue="PrevWeapon"
            android:entries="@array/KeyActions"
            android:entryValues="@array/KeyActions"
            android:key="volumeUpAction"
            android:summary="%s"
            android:title="@string/volumeUpAction" />
		<ListPreference
            android:defaultValue="NextWeapon"
            android:entries="@array/KeyActions"
            android:entryValues="@array/KeyActions"
            android:key="volumeDownAction"
            android:summary="%s"
            android:title="@string/volumeDownAction" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_gyroscope"
            android:summary="@string/gyroDescription"
            android:title="@string/gyroTitle" />
        <com.github.aarcangeli.serioussamandroid.preferences.SeekBarPreference
            android:defaultValue="100"
            android:key="gyro_sensibility"
            android:max="200"
            android:summary="%s%%"
            android:text="%"
            android:title="@string/gyroSens" />
        <com.github.aarcangeli.serioussamandroid.preferences.SeekBarPreference
            android:defaultValue="100"
            android:key="aimView_sensibility"
            android:max="200"
            android:summary="%s%%"
            android:text="%"
            android:title="@string/dragSens" />
        <com.github.aarcangeli.serioussamandroid.preferences.SeekBarPreference
            android:defaultValue="50"
            android:key="input_opacity"
            android:max="100"
            android:summary="%s%%"
            android:text="%"
            android:title="@string/inputOpacity" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/controllerTitle">
        <com.github.aarcangeli.serioussamandroid.preferences.SeekBarPreference
            android:defaultValue="20"
            android:key="ctrl_deadZone"
            android:max="100"
            android:summary="%s%%"
            android:text="%"
            android:title="@string/controllerDeadZone" />
        <com.github.aarcangeli.serioussamandroid.preferences.SeekBarPreference
            android:defaultValue="100"
            android:key="ctrl_aimSensibility"
            android:max="200"
            android:summary="%s%%"
            android:text="%"
            android:title="@string/controllerViewSens" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/debug">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hud_iStats"
            android:summary="@string/showStatsDescription"
            android:title="@string/showStatsTitle" />
    </PreferenceCategory>
</PreferenceScreen>
